@@ -29,6 +29,7 @@ Month Day, 2005 - 3.8.0
 * [Herve Drolon] fixed a bug in FreeImage_Rescale with 16-,48-,64-bit images
 * [Herve Drolon] fixed a bug in the ICC profiles API when loading profile-less CMYK TIFF
 * [Herve Drolon] 4-bit PNG are now loaded as 4-bit and no longer converted to 8-bit
+* [Greg Ng] fixed a bug in FreeImage_ConvertToRGBF (FIT_BITMAP -> FIT_RGBF conversion)
 
 May 7, 2005 - 3.7.0
 ! FreeImage now uses libTIFF 3.7.2
